# arcore-gltf

./: README.md
hello_ar_java/: build.gradle  gradle.properties
hello_ar_java/app/: build.gradle
hello_ar_java/app/src/main/: AndroidManifest.xml
hello_ar_java/app/src/main/assets/models/: Duck2.glb  human.glb  rehab2.glb
hello_ar_java/app/src/main/cpp/: CMakeLists.txt  com_google_ar_core_examples_java_common_samplerender_tiny_gltf_loader.cpp  tiny_gltf.h
hello_ar_java/app/src/main/java/: CMakeLists.txt  com_google_ar_core_examples_java_common_samplerender_tiny_gltf_loader.cpp  com_google_ar_core_examples_java_common_samplerender_tiny_gltf_loader.h
hello_ar_java/app/src/main/java/com/google/ar/core/examples/java/common/helpers/: CameraPermissionHelper.java  DisplayRotationHelper.java  SnackbarHelper.java  TrackingStateHelper.java
hello_ar_java/app/src/main/java/com/google/ar/core/examples/java/common/samplerender/: Framebuffer.java  GLError.java  GpuBuffer.java  IndexBuffer.java  Mesh.java  SampleRender.java  Shader.java  Texture.java  VertexBuffer.java  tiny_gltf_loader.java
hello_ar_java/app/src/main/java/com/google/ar/core/examples/java/common/samplerender/arcore/: BackgroundRenderer.java  PlaneRenderer.java  SpecularCubemapFilter.java
hello_ar_java/app/src/main/java/com/google/ar/core/examples/java/helloar/: HelloArActivity.java
hello_ar_java/app/src/main/java/de/javagl/jgltf/model/: MeshModel.java
hello_ar_java/app/src/main/java/de/javagl/jgltf/model/io/: ImageReaders.java
hello_ar_java/gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
